--- a/tcks/microprofile-lra/pom.xml
+++ b/tcks/microprofile-lra/pom.xml
@@ -14,7 +14,7 @@
 
     <properties>
         <microprofile-lra-tck.version>2.0</microprofile-lra-tck.version>
-        <lra-coordinator-tag>7.0.0.Final-3.6.6</lra-coordinator-tag>
+        <lra-coordinator-tag>latest</lra-coordinator-tag>
     </properties>
 
     <build>
